package edu.fiuba.algo3.modelo;

public interface Arma {
    public int ataque(Policia policia);
}
