@startuml
class Ladron
{
    
}

interface Arma
{
}

class Cuchillo
{
}
class Pistola
{
}

interface Orden
{
    + tengoOrdenDeCaptura(Ladron ladron) : void
}
class OrdenDeCaptura
{
    + tengoOrdenDeCaptura(Ladron ladron) : void
}
class OrdenDeCapturaInvalida
{
    + tengoOrdenDeCaptura(Ladron ladron) : void
}

Ladron --> Arma
Arma <|.. Cuchillo
Arma <|.. Pistola
@enduml